trying to fix hidden navbar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body, html {
   padding: 0;
   font-family: sans-serif;
   height: 100vh;
-  overflow: hidden;
 }
 
  #root {
